[gd_scene load_steps=5 format=3 uid="uid://bunmx5nv2h7lm"]

[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_1if1m"]
[ext_resource type="PackedScene" uid="uid://ca33esxhwkguw" path="res://scenes/laser/laser.tscn" id="1_q3td4"]
[ext_resource type="PackedScene" uid="uid://cb5o81e8knwur" path="res://scenes/pipe/pipe.tscn" id="2_5n4vl"]
[ext_resource type="AudioStream" uid="uid://vjscrycvcq7i" path="res://assets/audio/score.wav" id="3_3qqle"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_1if1m")

[node name="Laser" parent="." instance=ExtResource("1_q3td4")]
z_index = -1
position = Vector2(0, 6)

[node name="Upper" parent="." instance=ExtResource("2_5n4vl")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("2_5n4vl")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(70, 0)

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3qqle")

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
